# Gauss

./: .gitignore  AGENTS.md  README.md
Windows/: CMakeLists.txt
src/: Gauss.h  Type.h  main.cpp
